crates/monochange/tests/snapshots/manifest_formatting__app_manifest@preserve_cargo.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: app_manifest
---
[package]
name = "workflow-app"
version = { workspace = true }
edition = "2021"
description = "app package"

[dependencies]
workflow-core = { workspace = true }
