crates/monochange/tests/snapshots/manifest_formatting__deno_json@preserve_ecosystem_manifests.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: deno_json
---
{
  "name": "tool",
  "version": "1.1.0",
  "imports": {
    "core": "^1.0.0"
  }
}
