crates/monochange/tests/snapshots/manifest_formatting__extra_file@preserve_cargo.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: extra_file
---
[package]
name = "workflow-core"
version = "1.1.0"

[dependencies]
workflow-app = { version = "1.0.0", path = "../app" }
