crates/monochange/tests/snapshots/manifest_formatting__package_json@preserve_ecosystem_manifests.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: package_json
---
{
  "name": "web",
  "version": "1.1.0",
  "private": false,
  "dependencies": {
    "shared": "^1.0.0"
  },
  "metadata": {
    "bin": {
      "monochange": {
        "version": "1.1.0"
      }
    }
  }
}
