crates/monochange/tests/snapshots/manifest_formatting__pubspec@preserve_ecosystem_manifests.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: pubspec
---
name: mobile
version: '1.1.0' # keep quote
publish_to: none

dependencies:
  shared:
    path: ../shared
    version: ^1.0.0
