crates/monochange/tests/snapshots/manifest_formatting__root_manifest@preserve_cargo.snap
---
source: crates/monochange/tests/manifest_formatting.rs
expression: root_manifest
---
[workspace]
members = ["crates/*"]
resolver = "2"

# Keep this comment exactly where it is.
[workspace.package]
version = "1.1.0"
authors = ["monochange Maintainers"]

[workspace.dependencies]
workflow-core = { path = "./crates/core", version = "1.1.0", default-features = false }
workflow-app = { path = "./crates/app", version = "1.1.0" }
serde = { version = "1.0.219", features = ["derive"] }

[workspace.metadata.bin.monochange]
version = "1.1.0"
